--- a/package.json
+++ b/package.json
@@ -15,34 +15,46 @@
     "@angular/common": "^11.0.5",
     "@angular/compiler": "^11.0.5",
     "@angular/core": "^11.0.5",
+    "@angular/fire": "^7.1.1",
     "@angular/forms": "^11.0.5",
     "@angular/platform-browser": "^11.0.5",
     "@angular/platform-browser-dynamic": "^11.0.5",
     "@angular/router": "^11.0.5",
-    "bootstrap": "^3.3.7",
+    "@ngrx/store": "^12.5.1",
+    "bootstrap": "^3.4.1",
+    "firebase": "^9.3.0",
+    "rxfire": "^6.0.3",
     "rxjs": "^6.6.3",
     "rxjs-compat": "^6.0.0",
-    "tslib": "^2.0.3",
+    "tools": "0.0.0",
+    "tslib": "^2.3.1",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
+    "@angular-devkit/architect": "^0.1200.0",
     "@angular-devkit/build-angular": "^0.1100.4",
-    "@angular/cli": "^11.0.4",
+    "@angular/cli": "^11.2.15",
     "@angular/compiler-cli": "^11.0.5",
     "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.19.9",
+    "@types/jasminewd2": "^2.0.10",
+    "@types/node": "^12.20.36",
     "codelyzer": "^6.0.1",
+    "firebase-tools": "^9.22.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
+    "jsonc-parser": "^3.0.0",
     "karma": "~5.1.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.4",
+    "karma-jasmine-html-reporter": "^1.7.0",
+    "open": "^7.4.2",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "^4.4.4"
   }
 }
